fixed strange body horizontal scroll when doument height increases

--- a/src/components/home_navigation/HomeNavigation.css
+++ b/src/components/home_navigation/HomeNavigation.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 1rem;
+  padding: 1rem 3rem;
   background-color: var(-color-white);
   box-shadow: 0px 4px 3px var(--color-gray);
 }
