--- a/src/components/quiz/Quiz.css
+++ b/src/components/quiz/Quiz.css
@@ -8,6 +8,7 @@
   background-color: var(--login-color);
   border-radius: 4px;
   box-shadow: 0px 4px 4px var(--color-gray);
+  margin-bottom: 2rem;
 }
 
 .Quiz-color {
@@ -112,7 +113,7 @@
   }
 }
 
-@media screen and (max-width: 306px) {
+@media screen and (max-width: 320px) {
   .Quiz-image {
     display: none !important;
   }
