--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
   --login-color: #eeeeee;
   --color-black: #333333;
   --color-gray: #8a8a8a;
-  --color-edit: #77D970;
-  --color-alt-white: #F2F2F2;
+  --color-edit: #77d970;
+  --color-alt-white: #f2f2f2;
 }
 
 html {
@@ -23,6 +23,7 @@ html {
 }
 
 body {
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
 }
