--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,18 +1,16 @@
 .Home {
   width: 100vw;
-  height: 100vh;
 }
 
 .Home-mahoot {
   width: 50%;
-  height: auto;
+  overflow: hidden;
   margin: 5rem auto;
 }
 
 @media screen and (max-width: 2281px) {
   .Home-mahoot {
     width: 80%;
-    height: auto;
     margin: 5rem auto;
   }
 }
@@ -20,7 +18,6 @@
 @media screen and (max-width: 956px) {
   .Home-mahoot {
     width: 100%;
-    height: auto;
     margin: 5rem auto;
     padding: 1rem;
   }
